<resources>
    <string name="app_name">Weight lifting volume tracker</string>
    <string name="enter_name">enter name</string>
    <string name="enter_description">enter description</string>
    <string name="delete_selected_plan">Delete selected plan and its data?</string>
    <string name="delete_selected_session">Delete selected session and its data?</string>
    <string name="delete_selected_exercise">Delete selected exercise?</string>
    <string name="clear_history">Clear history?</string>
    <string name="delete_selected_set">Delete selected set?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="created">Created:</string>
    <string name="edit_plan">Edit plan</string>
    <string name="edit_session">Edit session</string>
    <string name="delete_plan">Delete plan</string>
    <string name="delete_session">Delete session</string>
    <string name="update_session">Update session</string>
    <string name="add_exercise">Add exercise</string>
    <string name="edit">Edit</string>
    <string name="show_chart">Show volume charts</string>
    <string name="show_all_sessions">Show all sessions</string>
    <string name="select_session">Select session</string>
    <string name="select_date">Select date</string>
    <string name="current_session">Current session</string>
    <string name="current_set">Current set</string>
    <string name="training_sessions">Training sessions</string>
    <string name="exercises">Exercises</string>
    <string name="previous_session">Previous session</string>
    <string name="session_from">Session from:</string>
    <string name="menu">Menu</string>
    <string name="delete">Delete</string>
    <string name="clear_data">Clear history</string>
    <string name="create_plan">Create plan</string>
    <string name="create_session">Create session</string>
    <string name="create_exercise">Create exercise</string>
    <string name="save_plan">Save plan</string>
    <string name="save_session">Save session</string>
    <string name="your_plans">Your plans</string>
    <string name="sessions">Sessions</string>
    <string name="sort">Sort</string>
    <string name="close">close</string>
    <string name="back">Back</string>
    <string name="plan">Plan</string>
    <string name="session">Session</string>
    <string name="you_have_no_plans">You have no plans</string>
    <string name="you_have_no_sessions">You have no sessions</string>
    <string name="you_have_no_exercises">You have no exercises</string>
    <string name="no_current_session">No current session</string>
    <string name="no_previous_session">No previous session</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="nav_back">Navigate back</string>
    <string name="plan_updated">Plan has been updated</string>
    <string name="exercise_updated">Exercise updated</string>
    <string name="plan_added">Plan has been added to the list</string>
    <string name="session_updated">Session has been updated</string>
    <string name="session_added">Session has been added</string>
    <string name="exercise_added">Exercise has been added to the list</string>
    <string name="could_not_save_session">Could\'t save session</string>
    <string name="could_not_save_exercise">Could\'t save exercise</string>
    <string name="history_cleared">History cleared!</string>
    <string name="could_not_save_log">Could\'t save log</string>
    <string name="set_added">Set added to the list</string>
    <string name="exercise">Exercise</string>
    <string name="save_exercise">Save exercise</string>
    <string name="goal">Goal</string>
    <string name="achieved">Achieved</string>
    <string name="weight">weight</string>
    <string name="reps">reps</string>
    <string name="pause">pause</string>
    <string name="complete_set">Complete set</string>
    <string name="set">Set</string>
    <string name="kg">kg.</string>
    <string name="sec">sec.</string>
    <string name="volume">Volume</string>
    <string name="volume_kg">Volume (kg)</string>
    <string name="pause_time">Total pause time</string>
    <string name="pause_time_sec">Pause between sets (sec)</string>
    <string name="number_of_sessions">Number of sessions</string>
    <string name="history">History</string>
    <string name="menu_icon">⋮</string>
    <string name="name">Name</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="date">Date</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="asc">Ascending</string>
    <string name="desc">Descending</string>
    <string name="deleted">deleted!</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="last_session">Last session</string>
</resources>